Remove unused code related to widget dragging

--- a/SparcFeatures/Kori/KoriWidget.razor
+++ b/SparcFeatures/Kori/KoriWidget.razor
@@ -1,4 +1,4 @@
-﻿<div id="kori-widget" class="kori-widget" onmousedown="startDrag(event)">
+﻿<div id="kori-widget" class="kori-widget">
     <div id="kori-widget__actions" class="kori-widget__actions kori-buddy__enabled">
         <img class="kori-buddy" src="kori/images/kori-buddy.svg" />
         <div class="kori-widget__content">
