Position the widget in the sidebar done

--- a/SparcFeatures/Kori/KoriWidget.razor
+++ b/SparcFeatures/Kori/KoriWidget.razor
@@ -7,6 +7,9 @@
                 <div>
                     <button class="kori__btn-text">Edit</button>
                     <button class="kori__btn-text">Review</button>
+                    <button id="dockButton" class="kori__btn-text" title="Dock">
+                        <img src="kori/images/dock-icon.svg" alt="Dock/Undock" />
+                    </button>
                 </div>
             </div>
             <div class="kori-widget__options">
