--- a/SparcFeatures/Kori/KoriWidget.scss
+++ b/SparcFeatures/Kori/KoriWidget.scss
@@ -21,6 +21,40 @@
         transition: none !important;
     }
 
+    &.animate-right-to-left {        
+        transition: right 200ms ease-in-out;        
+    }
+
+    &.docked {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        height: 100vh;
+        width: 298px;
+        background: #F2F2F2;
+
+        .kori-buddy {
+            display: none;
+        }
+
+        .kori-widget__actions {
+            top: 0;
+            transform: translateY(0);
+        }
+
+        .kori-widget__content {
+            border: none;
+        }
+
+        .kori-edit {
+            border: none;
+            top: 0;
+            transform: translateY(0);
+            right: 0;
+        }
+    }
+
     h5 {
         padding: 0;
         font-family: 'Love Ya Like A Sister' !important;
@@ -132,7 +166,7 @@
                     max-width: 18px;
                     max-height: 18px;
                     margin: auto 0;
-                }                
+                }
             }
         }
 
