--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -2601,6 +2601,34 @@ body.ibis-translating {
 .kori-widget.no-transition {
   transition: none !important;
 }
+.kori-widget.animate-right-to-left {
+  transition: right 200ms ease-in-out;
+}
+.kori-widget.docked {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  height: 100vh;
+  width: 298px;
+  background: #F2F2F2;
+}
+.kori-widget.docked .kori-buddy {
+  display: none;
+}
+.kori-widget.docked .kori-widget__actions {
+  top: 0;
+  transform: translateY(0);
+}
+.kori-widget.docked .kori-widget__content {
+  border: none;
+}
+.kori-widget.docked .kori-edit {
+  border: none;
+  top: 0;
+  transform: translateY(0);
+  right: 0;
+}
 .kori-widget h5 {
   padding: 0;
   font-family: "Love Ya Like A Sister" !important;
