--- a/SparcFeatures/Kori/KoriWidget.razor
+++ b/SparcFeatures/Kori/KoriWidget.razor
@@ -14,8 +14,8 @@
             </div>
             <div class="kori-widget__options">
                 <button class="options__edit kori__btn">Edit Content</button>
+                <button class="options__translation kori__btn">Translation</button>
                 <button class="options__ab kori__btn">A/B Testing</button>
-                <button class="options__publish kori__btn">Publish</button>
                 <button class="options__search kori__btn">Search</button>
             </div>
         </div>
@@ -24,7 +24,7 @@
     <div id="kori-edit" class="kori-edit">
         <div class="kori-edit__content">
             <div class="kori-edit__back">
-                <button id="kori-edit__back" class="kori__btn-text">&lt; Back to edit</button>
+                <button id="kori-edit__back" class="kori__btn-text">&lt;  Back</button>
             </div>
             <div class="kori-edit__header">
                 <h5>Edit your content.</h5>
@@ -44,6 +44,49 @@
             <div class="kori-edit__actions">
                 <button class="kori-edit__cancel kori__btn">Cancel</button>
                 <button class="kori-edit__save kori__btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="kori-translation" class="kori-translation">
+        <div class="kori-translation__content">
+            <div class="kori-translation__back">
+                <button id="kori-edit__back" class="kori__btn-text">&lt;  Back</button>
+            </div>
+            <div class="kori-translation__header">
+                <h5>Translation</h5>
+                <div class="kori-translation__header-actions">
+
+                </div>
+            </div>
+            <div class="kori-translation__options">
+                <div class="first-language">
+                    <select>
+                        <option>English</option>
+                        <option>Spanish</option>
+                        <option>Italian</option>
+                        <option>Mandarin</option>
+                        <option>Japanese</option>
+                        <option>Thai</option>
+                    </select>
+                </div>
+                <div class="swap-translation">
+                    <button class="swap-btn"><img src="kori/icons/Swap vertical.svg" /></button>
+                </div>
+                <div class="second-language">
+                    <select>
+                        <option>English</option>
+                        <option>Spanish</option>
+                        <option>Italian</option>
+                        <option>Mandarin</option>
+                        <option>Japanese</option>
+                        <option>Thai</option>
+                    </select>
+                </div>
+            </div>
+            <div class="kori-translation__actions">
+                <button class="kori-translation__cancel kori__btn">Reset</button>
+                <button class="kori-translation__save kori__btn-primary">Translate</button>
             </div>
         </div>
     </div>
