--- a/SparcFeatures/Kori/KoriWidget.scss
+++ b/SparcFeatures/Kori/KoriWidget.scss
@@ -21,8 +21,8 @@
         transition: none !important;
     }
 
-    &.animate-right-to-left {        
-        transition: right 200ms ease-in-out;        
+    &.animate-right-to-left {
+        transition: right 200ms ease-in-out;
     }
 
     &.docked {
@@ -149,6 +149,73 @@
             gap: 8px;
             flex-wrap: wrap;
             margin: 30px 0;
+
+            button {
+                display: flex;
+                height: 32px;
+                width: 32px;
+                padding: 4px;
+                justify-content: center;
+                align-items: center;
+                background: none;
+                border: 1px solid var(--grey-200);
+                border-radius: 8px;
+                transition: 200ms ease-in-out;
+
+                img {
+                    max-width: 18px;
+                    max-height: 18px;
+                    margin: auto 0;
+                }
+            }
+        }
+
+        &__actions {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 11px;
+
+            button {
+                width: 100%;
+            }
+        }
+    }
+
+    .kori-translation {
+        @extend .kori__border-black-15-16;
+        display: none;
+        width: 298px;
+        padding: 12px;
+        position: absolute;
+        top: 50%;
+        /*right: -322px;*/
+        transform: translatey(-50%);
+        background: var(--white);
+        text-align: left;
+
+        &__back {
+            margin-bottom: 11px;
+            font-size: 14px;
+            line-height: 0;
+        }
+
+        &__options {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 8px;
+            flex-wrap: wrap;
+            margin: 30px 0;
+
+            select {
+                @extend .kori__border-black-10-8 !optional;
+            }
+
+            .swap-translation {
+                margin: 0 auto;
+            }
 
             button {
                 display: flex;
