--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -2628,6 +2628,7 @@ body.ibis-translating {
   top: 0;
   transform: translateY(0);
   right: 0;
+  left: 0;
 }
 .kori-widget h5 {
   padding: 0;
@@ -2696,6 +2697,7 @@ body.ibis-translating {
   position: absolute;
   top: 50%;
   /*right: -322px;*/
+  left: 25px;
   transform: translatey(-50%);
   background: var(--white);
   text-align: left;
