--- a/SparcFeatures/Kori/KoriWidget.razor
+++ b/SparcFeatures/Kori/KoriWidget.razor
@@ -51,12 +51,13 @@
     <div id="kori-translation" class="kori-translation">
         <div class="kori-translation__content">
             <div class="kori-translation__back">
-                <button id="kori-edit__back" class="kori__btn-text">&lt;  Back</button>
+                <button id="kori-translation__back" class="kori__btn-text">&lt;  Back</button>
             </div>
             <div class="kori-translation__header">
                 <h5>Translation</h5>
                 <div class="kori-translation__header-actions">
-
+                    <button><img src="kori/icons/Volume up.svg" /></button>
+                    <button><img src="kori/icons/Settings.svg" /></button>
                 </div>
             </div>
             <div class="kori-translation__options">
@@ -87,6 +88,43 @@
             <div class="kori-translation__actions">
                 <button class="kori-translation__cancel kori__btn">Reset</button>
                 <button class="kori-translation__save kori__btn-primary">Translate</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="kori-search" class="kori-search">
+        <div class="kori-search__content">
+            <div class="kori-search__back">
+                <button id="kori-search__back" class="kori__btn-text">&lt;  Back</button>
+            </div>
+            <div class="kori-search__header">
+                <h5>Content Navigation</h5>
+                <div class="kori-search__searchbar">
+                    <img src="kori/icons/Search.svg" />
+                    <input id="kori-searchbar" type="text" placeholder="Search Page/Content Name..."/>
+                </div>
+            </div>
+            <div class="kori-search__list">
+                <div class="kori__content-container">
+                    <div class="kori__content-page">
+                        <img src="kori/icons/Page.svg" /> Content Page
+                    </div>
+                    <div class="kori__content-elements">
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                    </div>
+                </div>
+                <div class="kori__content-container">
+                    <div class="kori__content-page">
+                        <img src="kori/icons/Page.svg" /> Content Page
+                    </div>
+                    <div class="kori__content-elements">
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                        <div class="kori__content-item"><img src="kori/icons/Components.svg" /> Content Name</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
