Disable legacy Ibis stuff

--- a/SparcFeatures/Blog/Blog.razor
+++ b/SparcFeatures/Blog/Blog.razor
@@ -1,4 +1,4 @@
-@page "/blogs/{ChannelId}/{Tag}"
+@* @page "/blogs/{ChannelId}/{Tag}"
 
 <section class="blog-page">
     <div class="container">
@@ -17,4 +17,4 @@
     {
         Content = await Ibis.GetAsync(ChannelId, Tag);
     }
-}
+} *@
