--- a/SparcFeatures/Blog/BlogPost.razor
+++ b/SparcFeatures/Blog/BlogPost.razor
@@ -1,4 +1,4 @@
-﻿@using Sparc.Ibis;
+﻿@* @using Sparc.Ibis;
 
 <article class="blog-post ibis-ignore">
     <header>
@@ -42,3 +42,4 @@
 @code {
     [Parameter] public IbisContent Post { get; set; } = null!;
 }
+ *@
