--- a/SparcFeatures/Pages/KoriTestPage.razor
+++ b/SparcFeatures/Pages/KoriTestPage.razor
@@ -144,8 +144,6 @@
         </section>*@
     </div>
 </div>
-<KoriWidget />
-<KoriLogin />
 
 <script src="kori/js/kori.js" />
 
@@ -162,7 +160,7 @@
     {
         if (EmailAddress != null)
         {
-            await RegisterForCommunity.ExecuteAsync(new(EmailAddress));
+            //await RegisterForCommunity.ExecuteAsync(new(EmailAddress));
         }
     }
 
