--- a/SparcFeatures/Projects/Project.razor
+++ b/SparcFeatures/Projects/Project.razor
@@ -1,4 +1,4 @@
-﻿@page "/Projects/{Title}/{ChannelId}"
+﻿@* @page "/Projects/{Title}/{ChannelId}"
 
 <div class="project-page">
 <IbisTranslate ChannelId="@ChannelId">
@@ -36,7 +36,7 @@
                         {
                             <div class="timeline-item">
                                 <div class="item-header">
-@*                                    <p class="title-2 semi-bold">[Title]</p>*@
+                                    <p class="title-2 semi-bold">[Title]</p>
                                     <p class="timeline-date subtitle-small">@post.Timestamp.ToString("M")</p>
                                 </div>
                                 <p class="timeline-content">
@@ -62,4 +62,4 @@
     {
         Channel = await Ibis.GetAllAsync(Title);
     }
-}
+} *@
