--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -1,6 +1,6 @@
 @page "/"
 @layout MarketingLayout
-<PageTitle>Sparc</PageTitle>
+<PageTitle>Sparc Cooperative</PageTitle>
 
 <div class="homepage" id="homepage">
     <section class="home-hero">
