--- a/SparcFeatures/Shared/MarketingLayout.razor
+++ b/SparcFeatures/Shared/MarketingLayout.razor
@@ -1,10 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<IbisTranslate ChannelId="sparc-coop">
+<Kori.KoriContent>
     <div class="page">
         <NavMenu />
         <main class="landing">
             @Body
         </main>
     </div>
-</IbisTranslate>
+</Kori.KoriContent>
