--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -2045,12 +2045,12 @@ body.ibis-translating {
     opacity: 1;
   }
 }
-.ibis-translate {
+.kori-content {
   padding: 0;
   margin: 0;
 }
 
-.ibis-translating {
+.kori-initializing {
   visibility: visible;
   opacity: 0.3;
 }
@@ -2579,352 +2579,6 @@ body.ibis-translating {
   }
   100% {
     opacity: 1;
-  }
-}
-.kori-widget {
-  display: none;
-  position: absolute;
-  height: 100%;
-  line-height: 0;
-  top: 0;
-  right: 0;
-  z-index: 1000;
-  transition: 200ms ease-in-out;
-}
-.kori-widget.show, .kori-widget .show {
-  display: block !important;
-}
-.kori-widget .show {
-  top: 50%;
-  transform: translateY(-50%);
-}
-.kori-widget.no-transition {
-  transition: none !important;
-}
-.kori-widget.animate-right-to-left {
-  transition: right 200ms ease-in-out;
-}
-.kori-widget.docked {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  height: 100vh;
-  width: 298px;
-  background: #F2F2F2;
-}
-.kori-widget.docked .kori-buddy {
-  display: none;
-}
-.kori-widget.docked .kori-widget__actions {
-  top: 0;
-  transform: translateY(0);
-}
-.kori-widget.docked .kori-widget__content {
-  border: none;
-}
-.kori-widget.docked .kori-edit {
-  border: none;
-  top: 0;
-  transform: translateY(0);
-  right: 0;
-  left: 0;
-}
-.kori-widget h5 {
-  padding: 0;
-  font-family: "Love Ya Like A Sister" !important;
-  font-weight: 400;
-  font-size: 16px;
-}
-.kori-widget__actions {
-  display: none;
-  flex-direction: row;
-  justify-content: center;
-  gap: 20px;
-  position: absolute;
-}
-.kori-widget__actions.show {
-  display: flex !important;
-}
-.kori-widget__actions .kori-widget__content {
-  width: 300px;
-  padding: 12px;
-  background: var(--white);
-}
-.kori-widget__actions .kori-widget__header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-.kori-widget__actions .kori-widget__header div {
-  display: flex;
-  gap: 8px;
-}
-.kori-widget__actions .kori-widget__options {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.kori-widget__actions .kori-widget__options button {
-  width: 100%;
-  text-align: left !important;
-  /* padding: 6px;
-  background: none;
-  border: 10px solid transparent;
-  border-radius: 24px;
-  border-image: url('../../kori/borders/black-24.svg') 15 round;
-  color: var(--grey-900);
-  font-family: 'Love Ya Like A Sister' !important;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 100%;
-  text-align: left;
-  transition: 200ms ease-in-out;
-
-  &:hover {
-      filter: opacity(0.6);
-  }
-
-  &:active {
-      filter: opacity(1);
-  }*/
-}
-.kori-widget .kori-edit {
-  display: none;
-  width: 298px;
-  padding: 12px;
-  position: absolute;
-  top: 50%;
-  /*right: -322px;*/
-  left: 25px;
-  transform: translatey(-50%);
-  background: var(--white);
-  text-align: left;
-}
-.kori-widget .kori-edit__back {
-  margin-bottom: 11px;
-  font-size: 14px;
-  line-height: 0;
-}
-.kori-widget .kori-edit__options {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 8px;
-  flex-wrap: wrap;
-  margin: 30px 0;
-}
-.kori-widget .kori-edit__options button {
-  display: flex;
-  height: 32px;
-  width: 32px;
-  padding: 4px;
-  justify-content: center;
-  align-items: center;
-  background: none;
-  border: 1px solid var(--grey-200);
-  border-radius: 8px;
-  transition: 200ms ease-in-out;
-}
-.kori-widget .kori-edit__options button img {
-  max-width: 18px;
-  max-height: 18px;
-  margin: auto 0;
-}
-.kori-widget .kori-edit__actions {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 11px;
-}
-.kori-widget .kori-edit__actions button {
-  width: 100%;
-}
-
-.kori__btn, .kori__btn-primary {
-  padding: 0 !important;
-  background: none !important;
-  border-image-outset: 2px !important;
-  color: var(--grey-900) !important;
-  font-family: "Love Ya Like a Sister" !important;
-  font-size: 14px !important;
-  line-height: 100% !important;
-  text-align: center !important;
-  transition: 200ms ease-in-out !important;
-}
-
-.kori__btn-primary {
-  background: var(--orange-500) !important;
-}
-
-.kori__btn-text {
-  background: none !important;
-  border: none !important;
-  padding: 0 !important;
-  color: var(--grey-900) !important;
-  font-family: "Love Ya Like a Sister" !important;
-  font-size: 14px !important;
-  line-height: 100% !important;
-  transition: 200ms ease-in-out !important;
-}
-
-.kori-loggedin .kori__btn:hover, .kori-loggedin .kori__btn-primary:hover,
-.kori-loggedin .kori__btn-text:hover {
-  filter: opacity(0.6) !important;
-}
-.kori-loggedin .kori__btn-primary:hover {
-  background: var(--orange-200) !important;
-  filter: opacity(1) !important;
-}
-.kori-loggedin .kori-enabled:not(.selected):hover {
-  border: 1px solid var(--orange-500) !important;
-}
-.kori-loggedin .kori__btn:active, .kori-loggedin .kori__btn-primary:active,
-.kori-loggedin .kori__btn-text:active {
-  filter: opacity(1) !important;
-}
-.kori-loggedin .kori__btn-primary:active {
-  background: var(--orange-500) !important;
-}
-.kori-loggedin .kori-edit__options button:hover {
-  border: 1px solid var(--grey-700);
-}
-.kori-loggedin .kori-edit__options button:active {
-  border: 1px solid var(--grey-200);
-}
-
-.kori__border_black-10-8, .kori__btn, .kori__btn-primary {
-  border: 10px solid transparent;
-  border-image: url("../../kori/borders/black-8.svg") 15 round;
-  border-image-outset: 2px;
-  border-radius: 8px;
-}
-
-.kori__border_black-10-16 {
-  border: 10px solid transparent;
-  border-image: url("../../kori/borders/black-16.svg") 15 round;
-  border-image-outset: 2px;
-  border-radius: 16px;
-}
-
-.kori__border-black-15-16, .kori-widget__actions .kori-widget__content, .kori-widget .kori-edit {
-  border: 15px solid transparent;
-  border-image: url("../../kori/borders/black-16.svg") 15 round;
-  border-image-outset: 4px;
-  border-radius: 16px;
-}
-
-.kori__border_orange-15-16, .kori-enabled.selected {
-  border: 15px solid transparent;
-  border-image: url("../../kori/borders/orange-16.svg") 15 round;
-  border-image-outset: 4px;
-  border-radius: 16px;
-}
-
-.kori-login {
-  display: none;
-  position: absolute;
-  top: 0;
-  right: 24px;
-  animation: login_fadeIn 1000ms linear;
-}
-.kori-login.show {
-  display: flex;
-  gap: 12px;
-}
-.kori-login .kori-buddy {
-  width: 88px;
-}
-.kori-login__container {
-  padding: 12px;
-  background: var(--white);
-  border-radius: 0 0 16px 16px;
-}
-.kori-login h5, .kori-login input, .kori-login label, .kori-login button {
-  font-family: "Love Ya Like A Sister" !important;
-  font-size: 14px;
-  color: var(--grey-900);
-}
-.kori-login__header {
-  margin-bottom: 12px;
-}
-.kori-login__input {
-  display: flex;
-  gap: 8px;
-  padding: 0;
-  background: var(--white);
-  border: 10px solid transparent;
-  border-image: url("../../kori/borders/black-16.svg") 15 round;
-}
-.kori-login__input input {
-  padding: 0;
-  border: none;
-}
-.kori-login__input input placeholder {
-  color: var(--grey-500);
-}
-.kori-login__keep {
-  display: flex;
-  gap: 8px;
-  font-size: 14px;
-}
-.kori-login__keep input {
-  margin-top: 6px;
-  width: 14px;
-  height: 14px;
-  border: 4px solid transparent;
-  border-image: url("../../kori/borders/black-8.svg") 15 round;
-  border-radius: 2px;
-}
-.kori-login__keep input::before {
-  background: var(--grey-700);
-  box-shadow: var(--grey-700);
-}
-.kori-login__actions {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  margin-top: 12px;
-}
-.kori-login__actions button {
-  width: 100%;
-  padding: 0;
-  background: none;
-  border: 10px solid transparent;
-  border-image: url("../../kori/borders/black-8.svg") 15 round;
-}
-.kori-login__actions button.kori-login__btn {
-  width: calc(100% - 4px);
-  height: calc(100% - 4px);
-  margin: 0 auto;
-  background: var(--orange-500);
-  border-radius: 8px;
-  border-image-outset: 2px;
-}
-.kori-login__actions button.kori-login__btn:hover {
-  background: var(--orange-200) !important;
-  filter: opacity(1) !important;
-}
-.kori-login__actions button.kori-login__btn:active {
-  background: var(--orange-500) !important;
-}
-.kori-login__actions button.kori-login__cancel:hover {
-  filter: opacity(0.6) !important;
-}
-.kori-login__actions button.kori-login__cancel:active {
-  filter: opacity(1) !important;
-}
-
-@keyframes login_fadeIn {
-  0% {
-    opacity: 0;
-    top: -211px;
-  }
-  100% {
-    opacity: 1;
-    top: 0;
   }
 }
 :root {
