--- a/Kori/KoriLogin.razor
+++ b/Kori/KoriLogin.razor
@@ -1,11 +1,11 @@
 ﻿<div id="kori-login" class="kori-login show">
-    <img class="kori-buddy" src="kori/images/kori-buddy.svg" />
+    <img class="kori-buddy" src="/_content/Kori/images/kori-buddy.svg" />
     <div class="kori-login__container">
         <div class="kori-login__header">
             <h5>Please login to use service</h5>
         </div>
         <div class="kori-login__input">
-            <img src="kori/icons/User.svg" />
+            <img src="/_content/Kori/icons/User.svg" />
             <input type="text" placeholder="Phone or Email" @* pattern=@($"^([a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3})|(\d{3}-\d{3}-\d{4})$")" *@ required />
         </div>
         <div class="kori-login__keep">
