--- a/Kori/KoriLogin.razor.css
+++ b/Kori/KoriLogin.razor.css
@@ -31,7 +31,7 @@
   padding: 0;
   background: var(--white);
   border: 10px solid transparent;
-  border-image: url("kori/borders/black-16.svg") 15 round;
+  border-image: url("/_content/Kori/borders/black-16.svg") 15 round;
 }
 .kori-login__input input {
   padding: 0;
@@ -50,7 +50,7 @@
   width: 14px;
   height: 14px;
   border: 4px solid transparent;
-  border-image: url("kori/borders/black-8.svg") 15 round;
+  border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
   border-radius: 2px;
 }
 .kori-login__keep input::before {
@@ -68,7 +68,7 @@
   padding: 0;
   background: none;
   border: 10px solid transparent;
-  border-image: url("kori/borders/black-8.svg") 15 round;
+  border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
 }
 .kori-login__actions button.kori-login__btn {
   width: calc(100% - 4px);
