--- a/Kori/KoriLogin.razor.scss
+++ b/Kori/KoriLogin.razor.scss
@@ -36,7 +36,7 @@
         padding: 0;
         background: var(--white);
         border: 10px solid transparent;
-        border-image: url('kori/borders/black-16.svg') 15 round;
+        border-image: url('/_content/Kori/borders/black-16.svg') 15 round;
 
         input {
             padding: 0;
@@ -58,7 +58,7 @@
             width: 14px;
             height: 14px;
             border: 4px solid transparent;
-            border-image: url('kori/borders/black-8.svg') 15 round;
+            border-image: url('/_content/Kori/borders/black-8.svg') 15 round;
             border-radius: 2px;
 
             &::before {
@@ -79,7 +79,7 @@
             padding: 0;
             background: none;
             border: 10px solid transparent;
-            border-image: url('kori/borders/black-8.svg') 15 round;
+            border-image: url('/_content/Kori/borders/black-8.svg') 15 round;
 
             &.kori-login__btn {
                 width: calc(100% - 4px);
