WORKING NEW WIDGET ARCHITECTURE

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -1,6 +1,6 @@
 ﻿<div id="kori-widget" class="kori-widget">
     <div id="kori-widget__actions" class="kori-widget__actions kori-buddy__enabled">
-        <img class="kori-buddy" src="kori/images/kori-buddy.svg" />
+        <img class="kori-buddy" src="_content/Kori/images/kori-buddy.svg" />
         <div class="kori-widget__content">
             <div class="kori-widget__header">
                 <h5>How can I help you?</h5>
@@ -8,7 +8,7 @@
                     <button class="kori__btn-text">Edit</button>
                     <button class="kori__btn-text">Review</button>
                     <button id="dockButton" class="kori__btn-text" title="Dock">
-                        <img src="kori/images/dock-icon.svg" alt="Dock/Undock" />
+                        <img src="_content/Kori/images/dock-icon.svg" alt="Dock/Undock" />
                     </button>
                 </div>
             </div>
@@ -30,16 +30,16 @@
                 <h5>Edit your content.</h5>
             </div>
             <div class="kori-edit__options">
-                <button><img src="kori/icons/Bold.svg" /></button>
-                <button><img src="kori/icons/Italic.svg" /></button>
-                <button><img src="kori/icons/Strikethrough.svg" /></button>
-                <button><img src="kori/icons/Union.svg" /></button>
-                <button><img src="kori/icons/Code.svg" /></button>
-                <button><img src="kori/icons/Quote.svg" /></button>
-                <button><img src="kori/icons/Numbered.svg" /></button>
-                <button><img src="kori/icons/Bullet.svg" /></button>
-                <button><img src="kori/icons/Attachment.svg" /></button>
-                <button><img src="kori/icons/Link.svg" /></button>
+                <button><img src="_content/Kori/icons/Bold.svg" /></button>
+                <button><img src="_content/Kori/icons/Italic.svg" /></button>
+                <button><img src="_content/Kori/icons/Strikethrough.svg" /></button>
+                <button><img src="_content/Kori/icons/Union.svg" /></button>
+                <button><img src="_content/Kori/icons/Code.svg" /></button>
+                <button><img src="_content/Kori/icons/Quote.svg" /></button>
+                <button><img src="_content/Kori/icons/Numbered.svg" /></button>
+                <button><img src="_content/Kori/icons/Bullet.svg" /></button>
+                <button><img src="_content/Kori/icons/Attachment.svg" /></button>
+                <button><img src="_content/Kori/icons/Link.svg" /></button>
             </div>
             <div class="kori-edit__actions">
                 <button class="kori-edit__cancel kori__btn">Cancel</button>
