--- a/Kori/KoriWidget.razor.scss
+++ b/Kori/KoriWidget.razor.scss
@@ -21,8 +21,8 @@
         transition: none !important;
     }
 
-    &.animate-right-to-left {        
-        transition: right 200ms ease-in-out;        
+    &.animate-right-to-left {
+        transition: right 200ms ease-in-out;
     }
 
     &.docked {
@@ -181,6 +181,159 @@
 
             button {
                 width: 100%;
+            }
+        }
+    }
+
+    .kori-translation {
+        @extend .kori__border_black-15-16;
+        display: none;
+        width: 298px;
+        padding: 12px;
+        position: absolute;
+        top: 50%;
+        right: -322px;
+        transform: translateY(-50%);
+        background: var(--white);
+        text-align: left;
+
+        &__back {
+            margin-bottom: 11px;
+            font-size: 14px;
+            line-height: 0;
+        }
+
+        &__header {
+            display: flex;
+            justify-content: space-between;
+
+            h5 {
+                margin: auto 0;
+            }
+
+            &-actions {
+                display: flex;
+                flex-direction: row;
+                gap: 8px;
+            }
+
+            button {
+                @extend .kori__btn-icon;
+            }
+        }
+
+        &__options {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 8px;
+            flex-wrap: wrap;
+            margin: 30px 0;
+
+            select {
+                @extend .kori__border_black-10-8;
+                background: url('kori/icons/Chevron down.svg') no-repeat right white;
+                font-family: 'Love Ya Like A Sister';
+                font-size: 14px;
+                line-height: 100%;
+
+                option {
+                    background-color: var(--white);
+                    font-family: 'Love Ya Like A Sister';
+                    font-size: 14px;
+                    line-height: 100%;
+
+                    &:hover {
+                        background-color: var(--grey-200);
+                    }
+
+                    &:checked {
+                        background-color: none;
+                    }
+                }
+            }
+
+            .swap-translation {
+                margin: 0 auto;
+            }
+
+            button {
+                @extend .kori__btn-icon;
+            }
+        }
+
+        &__actions {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 11px;
+
+            button {
+                width: 100%;
+            }
+        }
+    }
+
+    .kori-search {
+        @extend .kori__border_black-15-16;
+        display: none;
+        width: 298px;
+        padding: 12px;
+        position: absolute;
+        top: 50%;
+        right: -322px;
+        transform: translateY(-50%);
+        background: var(--white);
+        text-align: left;
+
+        &__back {
+            margin-bottom: 11px;
+            font-size: 14px;
+            line-height: 0;
+        }
+
+        &__header {
+            margin-bottom: 24px;
+
+            h5 {
+                margin-bottom: 8px;
+            }
+
+            .kori-search__searchbar {
+                @extend .kori__border_black-10-8;
+                display: flex;
+                flex-direction: row;
+                gap: 8px;
+
+                input {
+                    padding: 4px;
+                    border: none;
+                }
+            }
+        }
+
+        &__list {
+            width: 100%;
+            padding: 0 24px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+
+            .kori__content-container {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+
+                .kori__content-page {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 8px;
+                    font-family: 'Love Ya Like A Sister';
+                    font-size: 14px;
+                    line-height: 100%;
+                }
             }
         }
     }
